api/gtkdoc_h/239/geany-gtkdoc.h


typedef enum {
	GEANY_INDENT_TYPE_SPACES,
	GEANY_INDENT_TYPE_TABS,
	GEANY_INDENT_TYPE_BOTH,
} GeanyIndentType;
typedef struct GeanyDocument GeanyDocument;
typedef struct GeanyIndentPrefs GeanyIndentPrefs;
typedef struct GeanyEditor GeanyEditor;
typedef struct GeanyFiletype GeanyFiletype;
typedef struct GeanyKeyGroup GeanyKeyGroup;
typedef gboolean(* GeanyKeyGroupFunc) (GeanyKeyGroup *group, guint key_id, gpointer user_data);
typedef struct PluginInfo PluginInfo;
typedef struct GeanyPlugin GeanyPlugin;
struct GeanyDocument {
	gboolean is_valid;
	gint index;
	gboolean has_tags;
	gchar* file_name;
	gchar* encoding;
	gboolean has_bom;
	GeanyEditor* editor;
	GeanyFiletype* file_type;
	TMSourceFile* tm_file;
	gboolean readonly;
	gboolean changed;
	gchar* real_path;
	guint id;
	struct GeanyDocumentPrivate* priv;
};
struct GeanyEditor {
	GeanyDocument* document;
	ScintillaObject* sci;
	gboolean line_wrapping;
	gboolean auto_indent;
	gfloat scroll_percent;
	GeanyIndentType indent_type;
	gboolean line_breaking;
	gint indent_width;
};
struct GeanyFiletype {
	GeanyFiletypeID id;
	TMParserType lang;
	gchar* name;
	gchar* title;
	gchar* extension;
	gchar** pattern;
	gchar* context_action_cmd;
	gchar* comment_open;
	gchar* comment_close;
	gboolean comment_use_indent;
	GeanyFiletypeGroupID group;
	gchar* error_regex_string;
	GeanyFiletype* lexer_filetype;
	gchar* mime_type;
	GIcon* icon;
	gchar* comment_single;
	gint indent_type;
	gint indent_width;
	struct GeanyFiletypePrivate* priv;
};
struct GeanyIndentPrefs {
	gint width;
	GeanyIndentType type;
	gint hard_tab_width;
	GeanyAutoIndent auto_indent_mode;
	gboolean detect_type;
	gboolean detect_width;
};
struct GeanyPlugin {
	PluginInfo* info;
	GeanyData* geany_data;
	GeanyPluginFuncs* funcs;
	GeanyProxyFuncs* proxy_funcs;
	struct GeanyPluginPrivate* priv;
};
struct PluginInfo {
	const gchar* name;
	const gchar* description;
	const gchar* version;
	const gchar* author;
};
GeanyDocument* document_find_by_real_path (const gchar *realname);
gint document_get_notebook_page (GeanyDocument *doc);
GeanyDocument* document_get_current (void);
gchar* document_get_basename_for_display (GeanyDocument *doc, gint length);
void document_set_text_changed (GeanyDocument *doc, gboolean changed);
gboolean document_close (GeanyDocument *doc);
gboolean document_remove_page (guint page_num);
GeanyDocument* document_new_file (const gchar *utf8_filename, GeanyFiletype *ft, const gchar *text);
GeanyDocument* document_open_file (const gchar *locale_filename, gboolean readonly, GeanyFiletype *ft, const gchar *forced_enc);
void document_open_files (const GSList *filenames, gboolean readonly, GeanyFiletype *ft, const gchar *forced_enc);
gboolean document_reload_force (GeanyDocument *doc, const gchar *forced_enc);
void document_rename_file (GeanyDocument *doc, const gchar *new_filename);
gboolean document_save_file_as (GeanyDocument *doc, const gchar *utf8_fname);
gboolean document_save_file (GeanyDocument *doc, gboolean force);
void document_set_filetype (GeanyDocument *doc, GeanyFiletype *type);
void document_set_encoding (GeanyDocument *doc, const gchar *new_encoding);
const GdkColor* document_get_status_color (GeanyDocument *doc);
GeanyDocument* document_index (gint idx);
const GeanyIndentPrefs* editor_get_indent_prefs (GeanyEditor *editor);
gchar* editor_get_word_at_pos (GeanyEditor *editor, gint pos, const gchar *wordchars);
void editor_insert_text_block (GeanyEditor *editor, const gchar *text, gint insert_pos, gint cursor_index, gint newline_indent_size, gboolean replace_newlines);
void editor_indicator_clear (GeanyEditor *editor, gint indic);
void editor_indicator_set_on_line (GeanyEditor *editor, gint indic, gint line);
void editor_indicator_set_on_range (GeanyEditor *editor, gint indic, gint start, gint end);
gint editor_get_eol_char_mode (GeanyEditor *editor);
const gchar* editor_get_eol_char_name (GeanyEditor *editor);
gint editor_get_eol_char_len (GeanyEditor *editor);
const gchar* editor_get_eol_char (GeanyEditor *editor);
void editor_set_indent_type (GeanyEditor *editor, GeanyIndentType type);
void editor_set_indent_width (GeanyEditor *editor, gint width);
gboolean editor_goto_pos (GeanyEditor *editor, gint pos, gboolean mark);
ScintillaObject* editor_create_widget (GeanyEditor *editor);
const gchar* editor_find_snippet (GeanyEditor *editor, const gchar *snippet_name);
void editor_insert_snippet (GeanyEditor *editor, gint pos, const gchar *snippet);
GType editor_get_type (void);
const GSList* filetypes_get_sorted_by_name (void);
GeanyFiletype* filetypes_detect_from_file (const gchar *utf8_filename);
GeanyFiletype* filetypes_lookup_by_name (const gchar *name);
GeanyFiletype* filetypes_index (gint idx);
const gchar* filetypes_get_display_name (GeanyFiletype *ft);
GType filetype_get_type (void);
GType geany_object_get_type (void);
void plugin_add_toolbar_item (GeanyPlugin *plugin, GtkToolItem *item);
void plugin_module_make_resident (GeanyPlugin *plugin);
GeanyKeyGroup* plugin_set_key_group_full (GeanyPlugin *plugin, const gchar *section_name, gsize count, GeanyKeyGroupFunc cb, gpointer pdata, GDestroyNotify destroy_notify);
void plugin_builder_connect_signals (GeanyPlugin *plugin, GtkBuilder *builder, gpointer user_data);