api/geany-1.0.vapi

		[CCode (cname = "document_find_by_real_path")]
		[Version (since = "0.15")]
		public static unowned Geany.Document? find_by_real_path (string realname);
		[CCode (cname = "document_get_basename_for_display")]
		[Version (since = "0.17")]
		public string get_basename_for_display (int length);
		[CCode (cname = "document_get_current")]
		public static unowned Geany.Document? get_current ();
		[CCode (cname = "document_get_from_notebook")]
		[Version (since = "1.26")]
		public static Geany.Document get_from_notebook (Gtk.Notebook notebook, uint page_num);
		[CCode (cname = "document_get_notebook_page")]
		[Version (since = "0.19")]
		public int get_notebook_page ();
		[CCode (cname = "document_get_status_color")]
		[Version (since = "0.16")]
		public unowned Gdk.Color? get_status_color ();
		[CCode (cname = "document_index")]
		[Version (since = "0.16")]
		public static unowned Geany.Document? index (int idx);
		[CCode (cname = "document_new_file")]
		public static unowned Geany.Document new_file (string? utf8_filename, Geany.Filetype? ft, string? text);
		[CCode (cname = "document_open_file")]
		public static unowned Geany.Document? open_file (string locale_filename, bool readonly, Geany.Filetype? ft, string? forced_enc);
		[CCode (cname = "document_open_files")]
		public static void open_files (GLib.SList<string> filenames, bool readonly, Geany.Filetype? ft, string? forced_enc);
		[CCode (cname = "document_reload_force")]
		public bool reload_force (string? forced_enc);
		[CCode (cname = "document_remove_page")]
		public static bool remove_page (uint page_num);
		[CCode (cname = "document_rename_file")]
		[Version (since = "0.16")]
		public void rename_file (string new_filename);
		[CCode (cname = "document_save_file")]
		public bool save_file (bool force);
		[CCode (cname = "document_save_file_as")]
		[Version (since = "0.16")]
		public bool save_file_as (string? utf8_fname);
		[CCode (cname = "document_set_encoding")]
		public void set_encoding (string new_encoding);
		[CCode (cname = "document_set_filetype")]
		public void set_filetype (Geany.Filetype type);
		[CCode (cname = "document_set_text_changed")]
		public void set_text_changed (bool changed);
	}
	[CCode (cheader_filename = "geanyplugin.h", copy_function = "g_boxed_copy", free_function = "g_boxed_free", type_id = "editor_get_type ()")]
	[Compact]
	public class Editor {
		public bool auto_indent;
		public weak Geany.Document document;
		public bool line_breaking;
		public bool line_wrapping;
		public weak GeanyScintilla.ScintillaObject sci;
		public float scroll_percent;
		[CCode (cname = "editor_create_widget")]
		[Version (since = "0.15")]
		public unowned GeanyScintilla.ScintillaObject create_widget ();
		[CCode (cname = "editor_find_snippet")]
		public unowned string? find_snippet (string snippet_name);
		[CCode (cname = "editor_get_eol_char")]
		[Version (since = "0.19")]
		public unowned string get_eol_char ();
		[CCode (cname = "editor_get_eol_char_len")]
		[Version (since = "0.19")]
		public int get_eol_char_len ();
		[CCode (cname = "editor_get_eol_char_mode")]
		[Version (since = "0.20")]
		public int get_eol_char_mode ();
		[CCode (cname = "editor_get_eol_char_name")]
		[Version (since = "0.19")]
		public unowned string get_eol_char_name ();
		[CCode (cname = "editor_get_indent_prefs")]
		public unowned Geany.IndentPrefs get_indent_prefs ();
		[CCode (cname = "editor_get_word_at_pos")]
		[Version (since = "0.16")]
		public string? get_word_at_pos (int pos, string wordchars);
		[CCode (cname = "editor_goto_pos")]
		[Version (since = "0.20")]
		public bool goto_pos (int pos, bool mark);
		[CCode (cname = "editor_indicator_clear")]
		[Version (since = "0.16")]
		public void indicator_clear (int indic);
		[CCode (cname = "editor_indicator_set_on_line")]
		[Version (since = "0.16")]
		public void indicator_set_on_line (int indic, int line);
		[CCode (cname = "editor_indicator_set_on_range")]
		[Version (since = "0.16")]
		public void indicator_set_on_range (int indic, int start, int end);
		[CCode (cname = "editor_insert_snippet")]
		public void insert_snippet (int pos, string snippet);
		[CCode (cname = "editor_insert_text_block")]
		public void insert_text_block (string text, int insert_pos, int cursor_index, int newline_indent_size, bool replace_newlines);
		[CCode (cname = "editor_set_indent_type")]
		[Version (since = "0.16")]
		public void set_indent_type (Geany.IndentType type);
		[CCode (cname = "editor_set_indent_width")]
		[Version (since = "1.27")]
		public void set_indent_width (int width);
	}
	[CCode (cheader_filename = "geanyplugin.h", has_type_id = false)]
	[Compact]
	public class EditorPrefs {
	}
	[CCode (cheader_filename = "geanyplugin.h", has_type_id = false)]
	[Compact]
	public class EntryAction {
	}
	[CCode (cheader_filename = "geanyplugin.h", has_type_id = false)]
	[Compact]
	public class EntryActionClass {
	}
	[CCode (cheader_filename = "geanyplugin.h", has_type_id = false)]
	[Compact]
	public class FilePrefs {
	}
	[CCode (cheader_filename = "geanyplugin.h", copy_function = "g_boxed_copy", free_function = "g_boxed_free", type_id = "filetype_get_type ()")]
	[Compact]
	public class Filetype {
		public weak GLib.GenericArray<void*> context_action_patterns;
		public weak string extension;
		public Geany.FiletypeID id;
		public weak string name;
		public weak string pattern;
		public void* priv;
		public weak string title;
		[CCode (cname = "filetypes_get_action_cmd")]
		public string _get_action_cmd (string word);
		[CCode (cname = "filetypes_get_display_name")]
		public unowned string _get_display_name ();
		[CCode (cname = "filetypes_detect_from_file")]
		public static unowned Geany.Filetype detect_from_file (string utf8_filename);
		[CCode (cname = "filetypes_get_action_cmd")]
		public static string get_action_cmd (Geany.Filetype ft, string word);
		[CCode (cname = "filetypes_get_display_name")]
		public static unowned string get_display_name (Geany.Filetype ft);
		[CCode (cname = "filetypes_get_sorted_by_name")]
		public static unowned GLib.SList<Geany.Filetype> get_sorted_by_name ();
		[CCode (cname = "filetypes_index")]
		[Version (since = "0.16")]
		public static unowned Geany.Filetype? index (int idx);
		[CCode (cname = "filetypes_lookup_by_name")]
		[Version (since = "0.15")]
		public static unowned Geany.Filetype? lookup_by_name (string name);
	}
	[CCode (cheader_filename = "geanyplugin.h", has_type_id = false)]
	[Compact]
	public class Functions {
	}
	[CCode (cheader_filename = "geanyplugin.h", has_type_id = false)]
	[Compact]
	public class IndentPrefs {
		public int hard_tab_width;
		public Geany.IndentType type;
		public int width;
	}
	[CCode (cheader_filename = "geanyplugin.h", has_type_id = false)]
	[Compact]
	public class InterfacePrefs {
		public bool compiler_tab_autoscroll;
		public weak string editor_font;
		public int editor_split;
		public bool highlighting_invert_all;
		public bool msgwin_compiler_visible;
		public weak string msgwin_font;
		public bool msgwin_messages_visible;
		public int msgwin_orientation;
		public bool msgwin_scribble_visible;
		public bool msgwin_status_visible;
		public bool notebook_double_click_hides_widgets;
		public bool show_notebook_tabs;
		public bool show_symbol_list_expanders;
		public bool sidebar_openfiles_visible;
		public int sidebar_pos;
		public bool sidebar_symbol_visible;
		public bool statusbar_visible;
		public int symbols_sort_mode;
		public int tab_pos_editor;
		public int tab_pos_msgwin;
		public int tab_pos_sidebar;
		public weak string tagbar_font;
		public bool use_native_windows_dialogs;
	}
	[CCode (cheader_filename = "geanyplugin.h", has_type_id = false)]
	[Compact]
	public class KeyBinding {
		public weak Geany.KeyCallback callback;
		public uint key;
		public weak string label;
		public weak Gtk.Widget menu_item;
		public Gdk.ModifierType mods;
		public weak string name;
	}
	[CCode (cheader_filename = "geanyplugin.h", has_type_id = false)]
	[Compact]
	public class KeyGroup {
	}
	[CCode (cheader_filename = "geanyplugin.h", has_type_id = false)]
	[Compact]
	public class KeyGroupInfo {
	}
	[CCode (cheader_filename = "geanyplugin.h", has_type_id = false)]
	[Compact]
	public class MainWidgets {
		public weak Gtk.Widget editor_menu;
		public weak Gtk.Widget message_window_notebook;
		public weak Gtk.Widget notebook;
		public weak GLib.GenericArray<void*> notebooks;
		public weak Gtk.Widget progressbar;
		public weak Gtk.Widget project_menu;
		public weak Gtk.Widget sidebar_notebook;
		public weak Gtk.Widget toolbar;
		public weak Gtk.Widget tools_menu;
		public weak Gtk.Widget window;
	}
	[CCode (cheader_filename = "geanyplugin.h", has_type_id = false)]
	[Compact]
	public class MatchInfo {
	}
	[CCode (cheader_filename = "geanyplugin.h", has_type_id = false)]
	[Compact]
	public class MenubuttonAction {
	}
	[CCode (cheader_filename = "geanyplugin.h", has_type_id = false)]
	[Compact]
	public class MenubuttonActionClass {
	}
	[CCode (cheader_filename = "geanyplugin.h", type_id = "geany_object_get_type ()")]
	public class Object : GLib.Object {
		[CCode (has_construct_function = false)]
		protected Object ();
		public signal void build_start ();
		public signal void document_activate (Geany.Document object);
		public signal void document_before_save (Geany.Document object);
		public signal void document_close (Geany.Document object);
		public signal void document_filetype_set (Geany.Document object, Geany.Filetype p0);
		public signal void document_new (Geany.Document object);
		public signal void document_open (Geany.Document object);
		public signal void document_reload (Geany.Document object);
		public signal void document_save (Geany.Document object);
		public signal bool editor_notify (Geany.Editor object, GeanyScintilla.SCNotification p0);
		public signal void geany_startup_complete ();
		public signal void load_settings (GLib.KeyFile object);
		public signal void project_before_close ();
		public signal void project_close ();
		public signal void project_dialog_close (Gtk.Notebook object);
		public signal void project_dialog_confirmed (Gtk.Notebook object);
		public signal void project_dialog_open (Gtk.Notebook object);
		public signal void project_open (GLib.KeyFile object);
		public signal void project_save (GLib.KeyFile object);
		public signal void save_settings (GLib.KeyFile object);
		public signal void update_editor_menu (string object, int p0, Geany.Document p1);
	}
	[CCode (cheader_filename = "geanyplugin.h", has_type_id = false)]
	[Compact]
	public class Page {
	}
	[CCode (cheader_filename = "geanyplugin.h", has_type_id = false)]
	[Compact]
	public class PageClass {
	}
	[CCode (cheader_filename = "geanyplugin.h", has_type_id = false)]
	[Compact]
	public class Plugin {
		public weak Geany.PluginFuncs funcs;
		public weak Geany.Data geany_data;
		public weak Geany.PluginInfo info;
		public void* priv;
		public weak Geany.ProxyFuncs proxy_funcs;
		[CCode (cname = "plugin_add_toolbar_item")]
		public void add_toolbar_item (Gtk.ToolItem item);
		[CCode (cname = "plugin_builder_connect_signals")]
		[Version (since = "1.24")]
		public void builder_connect_signals (Gtk.Builder builder, void* user_data);
		[Version (since = "1.32")]
		public void* get_data ();
		[CCode (cname = "plugin_module_make_resident")]
		[Version (since = "0.16")]
		public void module_make_resident ();
		[Version (since = "1.26")]
		public bool register (int api_version, int min_api_version, int abi_version);
		[Version (since = "1.26")]
		public bool register_full (int api_version, int min_api_version, int abi_version, void* pdata, GLib.DestroyNotify free_func);
		[Version (since = "1.26")]
		public bool register_proxy (string extensions);
		[Version (since = "1.26")]
		public void set_data (void* pdata, GLib.DestroyNotify free_func);
		[CCode (cname = "plugin_set_key_group_full")]
		[Version (since = "1.26")]
		public unowned Geany.KeyGroup set_key_group_full (string section_name, size_t count, owned Geany.KeyGroupFunc? cb);
